<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pref_I_understand_title"> I UNDERSTAND AND AGREE</string>
    <string name="pref_I_understand_summery">NightWatch MUST NOT BE USED TO MAKE MEDICAL DECISIONS. THERE IS NO WARRANTY FOR THE PROGRAM, TO THE EXTENT PERMITTED BY APPLICABLE LAW. EXCEPT WHEN OTHERWISE STATED IN WRITING THE COPYRIGHT HOLDERS AND/OR OTHER PARTIES PROVIDE THE PROGRAM “AS IS” WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE PROGRAM IS WITH YOU. SHOULD THE PROGRAM PROVE DEFECTIVE, YOU ASSUME THE COST OF ALL NECESSARY SERVICING, REPAIR OR CORRECTION. </string>
    <string name="app_name">NightWatch</string>
    <string name="action_settings">Settings</string>
    <string name="action_resend_to_watch">Resend glucose to watch</string>
    <string name="action_open_watch_setting">Open Settings on Wear</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_fetch_missing_records">Fetch missing records</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_missed">Create Missed Data Alert</string>
    <string name="create_high">Create High Alert</string>
    <string name="create_low">Create Low Alert</string>
    <string name="alert_tip">(Long Press an existing alert to edit)</string>
    <string name="xDripWidget">xDripWidget</string>
    <string name="snooze">Snooze</string>
    <string name="channel_name">Notifications Channel</string>
    <string name="channel_description">Notification Channel</string>
    <string name="bg_value_display">%1$.0f %2$s</string>
    <string name="bg_age_display">%1$s\n%2$s</string>
    <string name="version_number">Version Number</string>
    <string name="version_name">Version Name</string>
    <string name="about">About</string>
    <string name="replace_dynamically_edit_alert_header">replace dynamically (edit_alert_header)</string>
    <string name="test_alert">test alert</string>
    <string name="save_alert">save alert</string>
    <string name="default_snooze">Default Snooze:</string>
    <string name="choose_file">Choose file</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="vibrate_on_alert">Vibrate on alert</string>
    <string name="override_phone_silent_mode">Override phone Silent Mode:</string>
    <string name="tap_to_change">(tap to change)</string>
    <string name="_dashes_">--</string>
    <string name="_12_00_am">12:00 AM</string>
    <string name="alerts_and_messages">Alerts and messages</string>
    <string name="replace_dynamically_alert_status">replace dynamically (alert status)</string>
    <string name="disable_low_alerts">Disable Low alerts</string>
    <string name="re_enable_low_alerts">Re-Enable Low Alerts</string>
    <string name="disable_high_alerts">Disable High alerts</string>
    <string name="re_enable_high_alerts">Re-Enable High Alerts</string>
    <string name="disable_all_alerts">Disable All alerts</string>
    <string name="re_enable_all_alerts">Re-Enable All Alerts</string>
    <string name="td">TD</string>
    <string name="ytd">YTD</string>
    <string name="_7d">7d</string>
    <string name="_30d">30d</string>
    <string name="_90d">90d</string>
    <string name="__dashes__">---</string>
    <string name="_two_dash_">--</string>
    <string name="_00_00">00:00</string>
    <string name="blood_glucose_graph">Blood Glucose Graph</string>
    <string name="__three_dashes__">---</string>
    <string name="_two_dashes_">--</string>
    <string name="mgdl">-- mgdl</string>
    <string name="minutes_ago">-- minutes ago</string>
    <string name="textview">TextView</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="mean_bg">Mean BG:</string>
    <string name="cv">CV:</string>
    <string name="range_n_in_high_low">Range:\n(in/high/low)</string>
    <string name="__precents__">--%/--%/--%</string>
    <string name="absolute_s">Absolute #s:</string>
    <string name="_date_blank_">--/--/--</string>
    <string name="median_bg">Median BG:</string>
    <string name="__three_dashes_">---</string>
    <string name="hba1c_est">HbA1c est.:</string>
    <string name="mmol_mol_n">-- mmol/mol\n --%</string>
    <string name="stddev">StdDev:</string>
    <string name="_three_dashes_">---</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="save">Save</string>

</resources>
