<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_small"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView android:id="@+id/widgetGraph"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:contentDescription="@string/blood_glucose_graph"
        android:scaleType="centerInside"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="2dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:background="#55212121"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:id="@+id/widgetBg"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/__dashes__"
                android:textColor="#ffffff" android:textSize="55sp"
                android:layout_marginTop="-5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="37sp"
                    android:text="@string/_two_dash_"
                    android:id="@+id/widgetArrow"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="-5dp"/>

                <TextView
                    android:id="@+id/widgetDelta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mgdl"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:text="@string/_00_00"
                android:id="@+id/widget_time"
                android:visibility="gone"
                android:layout_gravity="center_horizontal|left|top"
                android:layout_marginTop="0dp"
                android:paddingTop="0dp" />

            <TextView
                android:id="@+id/readingAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/minutes_ago"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
