<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_wide"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView android:id="@+id/widgetGraphWide"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:contentDescription="@string/blood_glucose_graph"
        android:scaleType="centerInside"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="2dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:background="#55212121"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical|left">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView android:id="@+id/wwidgetBg"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/__three_dashes__"
                android:textColor="#ffffff" android:textSize="55sp"
                android:layout_marginTop="-5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="37sp"
                    android:text="@string/_two_dashes_"
                    android:id="@+id/wwidgetArrow"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="-5dp"/>

                <TextView
                    android:id="@+id/wwidgetDelta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/mgdl"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/wreadingAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/minutes_ago"
            android:textColor="#ffffff"
            android:textSize="12sp" />
    </LinearLayout>
</FrameLayout>
