<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    tools:context=".activities.Home">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:elevation="4dp"/>
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/stats_main_layout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:minHeight="1dp"
            android:minWidth="1dp">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/td"
                android:id="@+id/button_stats_today"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:minHeight="1dp"
                android:minWidth="1dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ytd"
                android:id="@+id/button_stats_yesterday"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:minHeight="1dp"
                android:minWidth="1dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7d"
                android:id="@+id/button_stats_7d"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:minHeight="1dp"
                android:minWidth="1dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30d"
                android:id="@+id/button_stats_30d"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:minHeight="1dp"
                android:minWidth="1dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_90d"
                android:id="@+id/button_stats_90d"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:minHeight="1dp"
                android:minWidth="1dp"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/indicator_layout">
        </LinearLayout>
        <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />




    </LinearLayout> </LinearLayout>
        <fragment
            android:id="@+id/navigation_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:name="com.dexdrip.stephenblack.nightwatch.NavigationDrawerFragment"
            tools:layout="@layout/fragment_navigation_drawer" />
    </androidx.drawerlayout.widget.DrawerLayout>
</LinearLayout>

